Process thoughts: duration ordering for "friends"
* Compose pseudo code
* Note down questions regarding the definition of "past week":
  is it 7 days from the request? Is it the last 7 days? Is it business
  days, etc. It would be useful to have some clarification on this.

--- a/README.adoc
+++ b/README.adoc
@@ -23,6 +23,8 @@ We require some restful APIS to achieve the following:
 3. See the sleep records over the past week for their friends,
 ordered by the length of their sleep.
 
+What do we mean by "past week"? 7 days, or from Monday, or 7 * 24 hours... etc
+
 Please implement the model, db migrations, and JSON API.
 You can assume that there are only two fields on the users "id" and "name".
 
